staging/src/k8s.io/api/testdata/v1.15.0/extensions.v1beta1.Ingress.json
{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "namespace": "4",
    "selfLink": "5",
    "uid": "ą飋īqJ枊a8衍`Ĩɘ.蘯6ċV夸e",
    "resourceVersion": "16964250748386560239",
    "generation": 8071137005907523419,
    "creationTimestamp": null,
    "deletionGracePeriodSeconds": -4955867275792137171,
    "labels": {
      "7": "8"
    },
    "annotations": {
      "9": "10"
    },
    "ownerReferences": [
      {
        "apiVersion": "11",
        "kind": "12",
        "name": "13",
        "uid": "Dz廔ȇ{sŊƏp",
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "14"
    ],
    "clusterName": "15",
    "managedFields": [
      {
        "manager": "16",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "17",
        "fields": {
          "18": {
            "19": null
          }
        }
      }
    ]
  },
  "spec": {
    "backend": {
      "serviceName": "24",
      "servicePort": "25"
    },
    "tls": [
      {
        "hosts": [
          "26"
        ],
        "secretName": "27"
      }
    ],
    "rules": [
      {
        "host": "28",
        "http": {
          "paths": [
            {
              "path": "29",
              "backend": {
                "serviceName": "30",
                "servicePort": -213805612
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "loadBalancer": {
      "ingress": [
        {
          "ip": "31",
          "hostname": "32"
        }
      ]
    }
  }
}
